@@ -50,6 +50,10 @@
     <string name="menu_float_mode_tlh">machchoH</string>
     <string name="float_mode_status">Running in float mode.</string>
 
+    <!-- The menu entry that sends a request for translation to the G+ Klingon language community. -->
+    <string name="menu_request_translation">Request translation</string>
+    <string name="menu_request_translation_tlh">mugh \'e\' tlhob</string>
+
     <!-- The description that will show up in the search settings for this source, e.g., "Definitions of words".  -->
     <string name="settings_description">Klingon words and sentences</string>
     <string name="settings_description_tlh">tlhIngan Hol mu\'mey mu\'tlheghmey je</string>
