@@ -1,5 +1,6 @@
 CHANGELOG
 
+2014-04-06: Added "Request translation" menu item.
 2014-03-31: Fixed some sources.
 2014-03-05: Miscellaneous minor edits.
 2014-02-09: Add "heartbeat" meaning to {tIq:v} from {paq'batlh}.
